added new info to locales, link color adj

--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -1,3 +1,14 @@
 {
-  "title": "Дмитрий Попов"
+  "title": "Дмитрий Попов",
+
+  "stackLink": "стек",
+  "projectsLink": "проекты",
+  "postsLink": "посты",
+  "sourceLink": "source",
+  "hobbiesTitle": "увлечения",
+  "hobbie1": "содержу кота (11 годиков)",
+  "hobbie2": "обожаю играть в настольные игры",
+  "hobbie3": "хожу с друзьями на квизы",
+  "hobbie4": "пытаюсь научиться рисовать, но в итоге за меня все рисует midjourney",
+  "contactsTitle": "контакты"
 }
