(add) weather app project, logos; (fix) locale

--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -9,6 +9,6 @@
   "hobbie1": "содержу кота (11 годиков)",
   "hobbie2": "обожаю играть в настольные игры",
   "hobbie3": "хожу с друзьями на квизы",
-  "hobbie4": "пытаюсь научиться рисовать, но в итоге за меня все рисует midjourney",
+  "hobbie4": "пытаюсь научиться рисовать, но в итоге все за меня рисует midjourney",
   "contactsTitle": "контакты"
 }
