--- a/locales/ru-RU/projects.json
+++ b/locales/ru-RU/projects.json
@@ -16,8 +16,8 @@
 "restPleaseTitle": " ",
 "restPleaseDescription": "Приложение для тестирования эндпоинтов. Упрощенная версия postman и insomnia",
 
-"englishGrammarTitle: " ",
-"englishGrammarDescription: "Сайт-шпаргалка по грамматике английского языка",
+"englishGrammarTitle": " ",
+"englishGrammarDescription": "Сайт-шпаргалка по грамматике английского языка",
 
 "theMoonTitle": " ",
 "theMoonDescription": "3D модель Луны и ее краткое описание. Создано для тестирования возможностей Three.js",
