--- a/locales/ru-RU/projects.json
+++ b/locales/ru-RU/projects.json
@@ -8,10 +8,10 @@
   "pubQuizDescription": "Сайт несуществующего квиза. Создан в качестве образца для тестирования возможностей Next.js",
 
   "harryPotterTitle": " ",
-  "harryPotterDescription": "Сайт, сожержащий небольшую базу данных о персонажах, заклинаниях и зельях, упоминающихся в фильма и книгах 'о мальчике, который выжил'",
+  "harryPotterDescription": "Сайт, сожержащий небольшую базу данных о персонажах, заклинаниях и зельях, упоминающихся в фильмах и книгах 'о мальчике, который выжил'",
 
   "catAkiTitle": " ",
-  "catAkiDescription": "Сайт кота по имени Аки",
+  "catAkiDescription": "Сайт кота по имени Аки. Создан для тестирования возможностей framer motion",
 
   "restPleaseTitle": " ",
   "restPleaseDescription": "Приложение для тестирования эндпоинтов. Упрощенная версия postman и insomnia",
@@ -26,10 +26,10 @@
   "mapBakeryDescription": "Адреса всех пекарен 'Кекс' в Ростове-на-Дону. Создано для тестирования возможностей React Leaflet",
 
   "mapRoutingTitle": " ",
-  "mapRoutingDescription": "Приложение для построения маршрута доставок. Создано для тестирования возможностей Tom Tom sdk",
+  "mapRoutingDescription": "Приложение для построения маршрута доставок. Создано для тестирования возможностей TomTom SDK",
 
   "mapWarehouseTitle": " ",
-  "mapWarehouseDescription": "Приложение для рассчета расстояния и времени доставки груза со склада до пункта выдачи. Создано для тестирования возможностей Tom Tom sdk",
+  "mapWarehouseDescription": "Приложение для рассчета расстояния и времени доставки груза со склада до пункта выдачи. Создано для тестирования возможностей TomTom SDK",
 
   "weatherForecasctTitle": " ",
   "weatherForecasctDescription": "Приложение, позволяющее узнать прогноз погоды"
