feat: make fonts responsive

--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -10,5 +10,6 @@
   "hobbie2": "обожаю играть в настольные игры",
   "hobbie3": "хожу с друзьями на квизы",
   "hobbie4": "пытаюсь научиться рисовать, но в итоге все за меня рисует midjourney",
-  "contactsTitle": "контакты"
+  "contactsTitle": "контакты",
+  "404": "на главную"
 }
