--- a/locales/ru-RU/stack.json
+++ b/locales/ru-RU/stack.json
@@ -1,6 +1,6 @@
 {
-  "pageTitle": "Технологии, которые я использую",
-  "languagesTitle": "ЯП",
+  "pageTitle": "Технологии, которые я использую:",
+  "languagesTitle": "Языки",
   "frontendTitle": "Фронтенд",
   "backendTitle": "Бэкенд",
   "frameworksFrontEndTitle": "Фреймворки",
