--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -6,10 +6,10 @@
   "postsLink": "посты",
   "sourceLink": "source",
   "hobbiesTitle": "увлечения",
-  "hobbie1": "содержу кота (11 годиков)",
-  "hobbie2": "обожаю играть в настольные игры",
-  "hobbie3": "хожу с друзьями на квизы",
-  "hobbie4": "пытаюсь научиться рисовать, но в итоге все за меня рисует midjourney",
+  "hobbie1": "обожаю играть в настольные игры",
+  "hobbie2": "хожу с друзьями на квизы",
+  "hobbie3": "пытаюсь научиться рисовать, но в итоге все за меня рисует Midjourney",
+  "hobbie4": "есть кот - Семен, 11 годиков: кормлю, глажу, слушаю мурлыканье",
   "contactsTitle": "контакты",
   "404": "на главную"
 }
