refactor: separate grid components, animation adj

--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -9,7 +9,7 @@
   "hobbie1": "обожаю играть в настольные игры",
   "hobbie2": "хожу с друзьями на квизы",
   "hobbie3": "пытаюсь научиться рисовать, но в итоге все за меня рисует Midjourney",
-  "hobbie4": "есть кот - Семен, 11 годиков: кормлю, глажу, слушаю мурлыканье",
+  "hobbie4": "есть кот - Семен, 11 годиков",
   "contactsTitle": "контакты",
   "404": "на главную"
 }
