feat: add new info to index page and locales

--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -1,6 +1,6 @@
 {
   "title": "Дмитрий Попов",
-
+  "description": "Я фуллстек разработчик из Ростова-на-Дону, Россия",
   "stackLink": "стек",
   "projectsLink": "проекты",
   "postsLink": "посты",
@@ -9,7 +9,7 @@
   "hobbie1": "обожаю играть в настольные игры",
   "hobbie2": "хожу с друзьями на квизы",
   "hobbie3": "пытаюсь научиться рисовать, но в итоге все за меня рисует Midjourney",
-  "hobbie4": "есть кот - Семен, 11 годиков",
+  "hobbie4": "есть кот - Семен, 11 годиков: кормлю, глажу, слушаю мурлыканье",
   "contactsTitle": "контакты",
   "404": "на главную"
 }
