--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -1,6 +1,6 @@
 {
   "title": "Dmitry Popov",
-
+  "desription": "I'm a fullstack developer from Rostov-on-Don, Russia",
   "stackLink": "stack",
   "projectsLink": "projects",
   "postsLink": "posts",
@@ -9,7 +9,7 @@
   "hobbie1": "fond of board games",
   "hobbie2": "play pub quizzes with friends",
   "hobbie3": "trying to learn how to draw, but in the end everything draws Midjourney",
-  "hobbie4": "have a cat Simon, 11 years old",
+  "hobbie4": "have a cat Simon, 11 years old: I feed, pet and listen to his purring",
   "contactsTitle": "contacts",
   "404": "to homepage"
 }
