fix: paddings and animation rotation speed

--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -1,6 +1,6 @@
 {
   "title": "Dmitry Popov",
-  "description": "I'm a fullstack developer from Rostov-on-Don, Russia",
+  "description": "A fullstack developer from Rostov-on-Don, Russia",
   "stackLink": "stack",
   "projectsLink": "projects",
   "postsLink": "posts",
