--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -1,6 +1,6 @@
 {
   "title": "Дмитрий Попов",
-  "description": "Я фуллстек разработчик из Ростова-на-Дону, Россия",
+  "description": "Фуллстек разработчик из Ростова-на-Дону, Россия",
   "stackLink": "стек",
   "projectsLink": "проекты",
   "postsLink": "посты",
