feat: add new project, locales, change paddings

--- a/locales/ru-RU/projects.json
+++ b/locales/ru-RU/projects.json
@@ -1,5 +1,7 @@
 {
   "pageTitle": "Проекты",
+  "urlShortenerTitle": "",
+  "urlShortenerDescription": "Минималистичный укорачиватель ссылок",
   "cryptoTrackerTitle": " ",
   "cryptoTrackerDescription": "Приложение для отслеживания покупок и продаж криптоактивов",
   "pubQuizTitle": " ",
