--- a/locales/en-US/projects.json
+++ b/locales/en-US/projects.json
@@ -2,6 +2,8 @@
   "pageTitle": "Projects",
   "cryptoTrackerTitle": " ",
   "cryptoTrackerDescription": "An application for tracking purchases and sales of cryptoassets",
+  "urlShortenerTitle": "",
+  "urlShortenerDescription": "Minimalist URL shortener",
   "pubQuizTitle": " ",
   "pubQuizDescription": "A website of a fictitious quiz. Created as a sample for testing Next.js features",
   "harryPotterTitle": " ",
