fix: layout width and overflow

--- a/locales/en-US/stack.json
+++ b/locales/en-US/stack.json
@@ -1,5 +1,5 @@
 {
-  "pageTitle": "My tech stack:",
+  "pageTitle": "My tech stack",
   "languagesTitle": "Languages",
   "frontendTitle": "Frontend",
   "backendTitle": "Backend",
