--- a/locales/ru-RU/stack.json
+++ b/locales/ru-RU/stack.json
@@ -1,5 +1,5 @@
 {
-  "pageTitle": "Технологии, которые я использую:",
+  "pageTitle": "Технологии, которые я использую",
   "languagesTitle": "Языки",
   "frontendTitle": "Фронтенд",
   "backendTitle": "Бэкенд",
